templates/nginx_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx
  annotations:
    kubernetes.io/ingress.class: "nginx"    
    cert-manager.io/issuer: "letsencrypt-prod"

spec:
  tls:
  - hosts:
    - example.kluster.in
    secretName: nginx-example-tls
  rules:
  - host: example.kluster.in
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx
          servicePort: 80
